unit_tests/regression.suite/unicode-error-msg.err
default{timer(){"ħ"}}
                   ^
(Line 1 char 20): ERROR: Syntax error
